add CPUID to boards in instance specs
